--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-size: 1em;
+  font-family:'Trebuchet MS','Helvetica', sans-serif;
+  background: #e6e6e6;
 }
